--- a/backend/Dockerfile.cpu
+++ b/backend/Dockerfile.cpu
@@ -1,45 +1,62 @@
-# ===========================================
-# VisionDrive Backend - Slim CPU Build
-# ===========================================
+# ----------------------------------------------------------------------
+# STAGE 1: BUILDER (Heavy lifting - compilation and pip installs)
+# Use the full Debian image for reliable compilation of complex packages
+# (e.g., PyTorch, OpenCV, or Dlib dependencies).
+# ----------------------------------------------------------------------
+FROM python:3.12-bookworm AS builder
 
-# ---- Stage 1: build dependencies ----
-FROM python:3.10-slim-bookworm AS builder
-
+# Set non-interactive mode for apt
 ENV DEBIAN_FRONTEND=noninteractive
+
 WORKDIR /app
 
-# Install only what's needed to compile dependencies
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential git wget curl ffmpeg libsm6 libxext6 libgl1 \
- && apt-get clean && rm -rf /var/lib/apt/lists/*
+# 1. Install necessary system dependencies for COMPILATION and RUNTIME.
+#    'build-essential' is for compilation; the rest are runtime libraries.
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+        build-essential git wget curl \
+        ffmpeg libsm6 libxext6 libgl1 \
+        # Dependencies for specific AI/CV libraries might be needed here, e.g.,
+        # libjpeg-dev, zlib1g-dev for Pillow/OpenCV
+    && rm -rf /var/lib/apt/lists/*
 
-COPY app/requirements.txt .
-RUN pip install --upgrade pip setuptools wheel && \
-    pip install --no-cache-dir -r requirements.txt
+# 2. Copy and install Python dependencies.
+COPY app/requirements-cpu.txt .
+RUN pip install --upgrade pip setuptools wheel \
+    && pip install --no-cache-dir -r requirements-cpu.txt \
+    && rm -rf /root/.cache/pip
 
-# ---- Stage 2: final runtime image ----
-FROM python:3.10-slim-bookworm
+# ----------------------------------------------------------------------
+# STAGE 2: FINAL (Runtime - Minimalist environment)
+# Use the slim image and only copy what is required to RUN the app.
+# ----------------------------------------------------------------------
+FROM python:3.12-slim-bookworm AS final
 
-ENV DEBIAN_FRONTEND=noninteractive
+# Re-install minimal runtime-only system dependencies
+# These are the dynamic libraries required by the binaries/Python packages
+# installed in the 'builder' stage.
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+        ffmpeg libsm6 libxext6 libgl1 \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 
-# Install only runtime libs (no compilers)
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    ffmpeg libsm6 libxext6 libgl1 wget curl \
- && apt-get clean && rm -rf /var/lib/apt/lists/*
-
-# Copy preinstalled Python packages from builder
-COPY --from=builder /usr/local/lib/python3.10 /usr/local/lib/python3.10
+# 1. Copy over the compiled Python packages (the bulk of your code/libraries).
+#    This includes FastAPI, PyTorch, and all dependencies.
+COPY --from=builder /usr/local/lib/python3.12/site-packages /usr/local/lib/python3.12/site-packages
 COPY --from=builder /usr/local/bin /usr/local/bin
 
-# Copy source code + models
+# 2. Copy the application source code and models.
+#    Use a specific path for the app (e.g., app/src)
 COPY app/src ./src
-RUN mkdir -p /app/models
 COPY models/ ./models/
 
-EXPOSE 8000
+# 3. Create a non-root user for security (as per your initial output)
+RUN useradd -m appuser
+USER appuser
 
-HEALTHCHECK --interval=30s --timeout=10s --start-period=15s --retries=3 \
-  CMD curl -f http://localhost:8000/docs || exit 1
-
-CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# 4. Set the entry point and command
+# Replace this with your actual startup command (e.g., uvicorn or gunicorn)
+CMD ["python", "src/main.py"]
