--- a/backend/Dockerfile.cpu
+++ b/backend/Dockerfile.cpu
@@ -1,40 +1,51 @@
+# backend/Dockerfile.cpu
+
 # ----------------------------------------------------------------------
-# STAGE 1: BUILDER (Heavy lifting - compilation and pip installs)
-# Use the full Debian image for reliable compilation of complex packages
-# (e.g., PyTorch, OpenCV, or Dlib dependencies).
+# BACKEND DOCKERFILE (CPU VERSION)
+# Version: v1.4
 # ----------------------------------------------------------------------
+
+# ======================================================================
+# STAGE 1: BUILDER
+# Heavy lifting - compilation, dependency installation
+# ======================================================================
 FROM python:3.12-bookworm AS builder
 
-# Set non-interactive mode for apt
+LABEL maintainer="Team Alpha <team@projectdomain.com>" \
+      version="v1.4" \
+      description="Backend CPU Build - FastAPI + MongoDB + Celery + Redis"
+
 ENV DEBIAN_FRONTEND=noninteractive
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
 
 WORKDIR /app
 
-# 1. Install necessary system dependencies for COMPILATION and RUNTIME.
-#    'build-essential' is for compilation; the rest are runtime libraries.
+# Install system dependencies for OpenCV, dlib, etc.
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
         build-essential git wget curl \
         ffmpeg libsm6 libxext6 libgl1 \
-        # Dependencies for specific AI/CV libraries might be needed here, e.g.,
-        # libjpeg-dev, zlib1g-dev for Pillow/OpenCV
     && rm -rf /var/lib/apt/lists/*
 
-# 2. Copy and install Python dependencies.
-COPY app/requirements-cpu.txt .
+# Copy dependency file and install Python packages
+COPY app/requirements-cpu.txt ./requirements-cpu.txt
 RUN pip install --upgrade pip setuptools wheel \
     && pip install --no-cache-dir -r requirements-cpu.txt \
     && rm -rf /root/.cache/pip
 
-# ----------------------------------------------------------------------
-# STAGE 2: FINAL (Runtime - Minimalist environment)
-# Use the slim image and only copy what is required to RUN the app.
-# ----------------------------------------------------------------------
+
+# ======================================================================
+# STAGE 2: FINAL RUNTIME IMAGE
+# Minimalist production environment
+# ======================================================================
 FROM python:3.12-slim-bookworm AS final
 
-# Re-install minimal runtime-only system dependencies
-# These are the dynamic libraries required by the binaries/Python packages
-# installed in the 'builder' stage.
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+ENV PATH="/home/appuser/.local/bin:$PATH"
+
+# Install only the necessary runtime libraries
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
         ffmpeg libsm6 libxext6 libgl1 \
@@ -43,20 +54,25 @@ RUN apt-get update \
 
 WORKDIR /app
 
-# 1. Copy over the compiled Python packages (the bulk of your code/libraries).
-#    This includes FastAPI, PyTorch, and all dependencies.
+# Copy over compiled dependencies from builder
 COPY --from=builder /usr/local/lib/python3.12/site-packages /usr/local/lib/python3.12/site-packages
 COPY --from=builder /usr/local/bin /usr/local/bin
 
-# 2. Copy the application source code and models.
-#    Use a specific path for the app (e.g., app/src)
+# Copy application source, models, and entrypoint
 COPY app/src ./src
 COPY models/ ./models/
+COPY app/docker-entrypoint.sh .
 
-# 3. Create a non-root user for security (as per your initial output)
+RUN chmod +x docker-entrypoint.sh
+
+# Security: Create non-root user
 RUN useradd -m appuser
 USER appuser
 
-# 4. Set the entry point and command
-# Replace this with your actual startup command (e.g., uvicorn or gunicorn)
-CMD ["python", "src/main.py"]
+# Healthcheck for monitoring systems (optional)
+HEALTHCHECK --interval=30s --timeout=5s --start-period=10s --retries=3 \
+  CMD curl -f http://localhost:8000/health/liveness || exit 1
+
+ENTRYPOINT ["/app/docker-entrypoint.sh"]
+CMD ["web"]
+
